cabal-version: 1.12

name:           fints2ledger
version:        1.2.0
synopsis:       Download transactions from FinTS into a ledger journal
description:    Please see the README on GitHub at <https://github.com/MoritzR/fints2ledger#readme>
category:       Finance, Console
homepage:       https://github.com/MoritzR/fints2ledger#readme
bug-reports:    https://github.com/MoritzR/fints2ledger/issues
author:         Moritz Rumpf
maintainer:     moritz.rumpf@gmail.com
copyright:      2023 Moritz Rumpf
license:        MIT
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    CHANGELOG.md
    LICENSE
data-files:
    data/example.json
    data/pyfints.py
    data/template.txt

source-repository head
  type: git
  location: https://github.com/MoritzR/fints2ledger

library fints2ledger-lib
  exposed-modules:
      App
      Completion
      Config.AppConfig
      Config.CliConfig
      Config.Files
      Config.StartupChecks
      Config.YamlConfig
      Dates.Parser
      Ledger
      Lib
      Matching.Matching
      Matching.Parser
      Prompt
      Transactions
      UI.ConfigFields
      UI.ConfigUI
      Utils
  other-modules:
      Paths_fints2ledger
  hs-source-dirs:
      src
  default-extensions:
      DuplicateRecordFields
      OverloadedRecordDot
      OverloadedStrings
      NoFieldSelectors
      BlockArguments
  ghc-options: -Wall -Wcompat -Widentities -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -Wno-unused-do-bind
  build-depends:
      aeson >=2.0.3 && <3
    , base >=4.16.4 && <5
    , base16-bytestring >=1.0.2 && <2
    , brick >=1.4 && <2
    , bytestring >=0.11.4 && <1
    , cassava >=0.5.3 && <1
    , containers >=0.6.5 && <1
    , cryptohash-md5 >=0.11.101 && <1
    , directory >=1.3.6 && <2
    , file-embed >=0.0.15 && <0.1
    , filepath >=1.4.2 && <2
    , generic-lens >=2.2.2 && <3
    , haskeline >=0.8.2 && <1
    , hledger-lib >=1.27.1 && <2
    , lens >=5.1.1 && <6
    , optparse-applicative >=0.17.1 && <1
    , regex-tdfa >=1.3.2 && <2
    , temporary
    , text >=1.2.5 && <2
    , text-format-heavy ==0.1.5.3
    , time >=1.11.1 && <2
    , transformers >=0.5.6 && <1
    , typed-process >=0.2.11 && <1
    , vector >=0.12.3 && <1
    , vty >=5.37 && <6
    , yaml >=0.11.11 && <1
  default-language: GHC2021

executable fints2ledger
  main-is: Main.hs
  other-modules:
      Paths_fints2ledger
  hs-source-dirs:
      app
  default-extensions:
      DuplicateRecordFields
      OverloadedRecordDot
      OverloadedStrings
      NoFieldSelectors
      BlockArguments
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      fints2ledger-lib
    , base
  default-language: GHC2021

test-suite fints2ledger-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      ConfigSpec
      Dates.ParserSpec
      Matching.MatchingSpec
      Matching.ParserSpec
      PromptSpec
      TransactionSpec
      UtilsSpec
  hs-source-dirs:
      test
  default-extensions:
      DuplicateRecordFields
      OverloadedRecordDot
      OverloadedStrings
      NoFieldSelectors
      BlockArguments
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      QuickCheck >= 2.15 && <= 2.16
    , aeson
    , base
    , containers
    , fints2ledger-lib
    , sydtest >= 0.19 && <= 0.20
    , transformers
    , text
    , time
    , yaml
  default-language: GHC2021
