name:                dates
version:             0.2.3.2
synopsis:            Small library for parsing different dates formats.
description:         This package allows to parse many different formats
                     of dates. Both absolute and relative dates are supported.
                     Supported date formats are:
                     .
                       * DD.MM.YYYY
                       .
                       * YYYY\/MM\/DD
                       .
                       * `12 September 2012'
                       .
                       * `today', `tomorrow', `yesterday'
                       .
                       * `in 2 days', '3 weeks ago'
                       .
                       * `last monday', 'next friday'
                       .
                       * `last month' (1th of this month), `next year' (1th of January of next year)
                     .
                     4-digits years may be abbreviated (such as 12 for 2012).
                     Both 12-hour and 24-hour time formats are supported.
                     .
                     User-specified date formats are supported by
                     Data.Dates.Formats module.

homepage:            https://github.com/portnov/dates
license:             BSD3
license-file:        LICENSE
author:              IlyaPortnov
maintainer:          portnov84@rambler.ru
-- copyright:           
category:            Data
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Data.Dates,
                       Data.Dates.Types,
                       Data.Dates.Formats,
                       Data.Dates.Internal

  build-depends:       base >=4.9 && < 4.17,
                       base-unicode-symbols ==0.2.*,
                       time >= 1.4 && < 1.12,
                       parsec ==3.1.*,
                       syb >=0.3.7 && < 0.8,
                       template-haskell >=2.0.0.0 && <2.19

  GHC-Options:         -O2
  default-language:    Haskell2010

Test-suite main
  type: exitcode-stdio-1.0
  build-depends: base >= 4.9 && < 4.17,
                 hspec,
                 dates
  hs-source-dirs: tests
  main-is: Spec.hs
  default-language:    Haskell2010

Source-repository head
  type:     git
  location: https://github.com/portnov/dates.git

